--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-8 display-flex align-items-center about-me-description">
                     <div class="">
-                        <h2>Erik Perez</h2>
+                        <h2>Erik Pérez</h2>
                         <h4 class="space-top">I'm passionate <span class="text-primary">Web Designer</span></h4>
                         <p class="text-secondary ">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sit reprehenderit tempora non quaerat voluptatum libero amet repudiandae facilis, officia omnis recusandae neque earum officiis voluptate velit dignissimos, iure quidem.
