--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/utilities.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap" rel="stylesheet">
+    <script src="./example.js"></script>
 </head>
 <body>
     <div class="container">
@@ -36,7 +37,7 @@
     <section class="intro">
         <div class="container">
             <div class="row">
-                <div class="col-6 display-flex align-items-center min-w-100-vh">
+                <div class="col-md-6 display-flex align-items-center min-w-100-vh">
                     <div>
                         <span class="intro-greeting">HELLO!</span>
                         <h1 class="margin-0">Hola me llamo Erik</h1>
@@ -49,7 +50,7 @@
                         <button class="btn btn-primary space-top">HIRE ME</button>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <img src="./assets/img/man-jumping.png" alt="">
                 </div>
             </div>
