add my skills section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
         </nav>
     </div>
+    <!-- Intro -->
     <section class="intro">
         <div class="container">
             <div class="row">
@@ -56,16 +57,18 @@
             </div>
         </div>
     </section>
+    <!-- About me -->
     <section class="about-me">
         <div class="container">
             <div class="row">
-                <div class="col-4 display-flex align-items-center">
+                <div class="col-md-4 display-flex align-items-center">
                     <div class="image-container">
                         <img src="./assets/img/man-jumping-real.png" alt="Hombre saltando">
                     </div>
                 </div>
-                <div class="col-8 display-flex align-items-center about-me-description">
-                    <div class="">
+                <div class="col-md-8 display-flex align-items-center about-me-description position-relative">
+                    <div class="vertical-line"></div>
+                    <div class="position-relative">
                         <h2>Erik Pérez Alvarez</h2>
                         <h4 class="space-top">I'm passionate <span class="text-primary">Web Designer</span></h4>
                         <p class="text-secondary ">
@@ -75,6 +78,97 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, veritatis eveniet. Dignissimos ad praesentium placeat perferendis eos molestias sunt vero voluptatum omnis. Nam sed nobis earum officia. Magni, iure eius.
                         </p>
                         <button class="btn btn-primary space-top">VIEW PORTFOLIO</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Skills -->
+    <section>
+        <div class="container">
+            <h2 class="text-center">My <span class="text-primary">skills</span></h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <p class="text-center text-secondary">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ut iste repudiandae vero.
+                    </p>
+                </div>
+            </div>
+            <div class="row text-secondary">
+                <div class="col-md-6">
+                    <div>
+                        <div class="display-flex justify-content-space-between">
+                            <span>HTML5</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-80"></div>
+                        </div>
+                    </div>
+                    <div class="space-top-lg">
+                        <div class="display-flex justify-content-space-between">
+                            <span>CSS 3</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-70"></div>
+                        </div>
+                    </div>
+                    <div class="space-top-lg">
+                        <div class="display-flex justify-content-space-between">
+                            <span>HTML5</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-80"></div>
+                        </div>
+                    </div>
+                    <div class="space-top-lg">
+                        <div class="display-flex justify-content-space-between">
+                            <span>CSS 3</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-70"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div>
+                        <div class="display-flex justify-content-space-between">
+                            <span>HTML5</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-80"></div>
+                        </div>
+                    </div>
+                    <div class="space-top-lg">
+                        <div class="display-flex justify-content-space-between">
+                            <span>CSS 3</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-70"></div>
+                        </div>
+                    </div>
+                    <div class="space-top-lg">
+                        <div class="display-flex justify-content-space-between">
+                            <span>HTML5</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-80"></div>
+                        </div>
+                    </div>
+                    <div class="space-top-lg">
+                        <div class="display-flex justify-content-space-between">
+                            <span>CSS 3</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="progress-container space-top">
+                            <div class="progress percent-70"></div>
+                        </div>
                     </div>
                 </div>
             </div>
